bat.bool1.in1020.In1020.scala.error
Compilation error:
In1020:2: error: not found: value negative
  if (negative == true) {
      ^